force-app/main/default/objects/Defect_PMT__c/Defect_PMT__c.object-meta.xml
<CustomObject>
    <label>Defect</label>
    <nameField>
        <displayFormat>DF-{000000}</displayFormat>
        <label>Defect Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>