force-app/main/default/objects/Defect_PMT__c/fields/Close_Date_PMT__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_PMT__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>