force-app/main/default/objects/Defect_PMT__c/fields/Defect_Detail_PMT__c.field-meta.xml
<CustomField>
    <fullName>Defect_Detail_PMT__c</fullName>
    <label>Defect Detail</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>