force-app/main/default/objects/Defect_PMT__c/fields/Status_PMT__c.field-meta.xml
<CustomField>
    <fullName>Status_PMT__c</fullName>
    <defaultValue>&quot;New&quot;</defaultValue>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Fixed in Dev</fullName>
            </value>
            <value>
                <fullName>Ready to test in Dev</fullName>
            </value>
            <value>
                <fullName>Fixed in QA</fullName>
            </value>
            <value>
                <fullName>Tested in QA</fullName>
            </value>
            <value>
                <fullName>Ready to test in QA</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>