force-app/main/default/objects/Defect_PMT__c/fields/Test_Script_PMT__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_PMT__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Test Script</label>
    <referenceTo>Test_Script_PMT__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defect</relationshipName>
    <type>Lookup</type>
</CustomField>