force-app/main/default/objects/Defect_PMT__c/fields/What_is_fixed_PMT__c.field-meta.xml
<CustomField>
    <fullName>What_is_fixed_PMT__c</fullName>
    <label>What is fixed</label>
    <length>3000</length>
    <type>Html</type>
</CustomField>